# Plotting

./: pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish_pypi.yml
flightplotting/: __init__.py  model.py  plots.py  templates.py  traces.py
src/flightplotting/: model.py  plots.py
src/plotting/: plots.py  traces.py
