[project]
name = "flightplotting"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Thomas David", email = "thomasdavid0@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
    "flightanalysis",
    "flightdata",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "pfc-geometry",
    "plotly>=5.24.1",
]
dynamic = ["version"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv.sources]
pfc-geometry = { workspace = true }
flightdata = { workspace = true }
flightanalysis = { workspace = true }
ardupilot_log_reader = { workspace = true }

[dependency-groups]
dev = ["ardupilot_log_reader", "pymavlink>=2.4.42", "pytest>=8.3.3"]
